tweak(nui/html): Use different id for the invisible div
I guess that name was meant to be changed before release hahahah

--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,7 @@
         </div>
     </div>
     <div class="MenuResources" style="display: none;">
-        <h1 id="putaInvisible"></h1>
+        <h1 id="invisible"></h1>
         <div class="AppendResourcesRoute">
             <!-- <div class="Ruta">
                 <h1>html/index.html</h1>
